[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agentsbay"
version = "0.1.0"
description = "Python SDK for the AgentsBay second-hand marketplace API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["agentsbay", "marketplace", "ai", "agents", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://agentsbay.org"
Repository = "https://github.com/agentsbay/agent-bay"
"Bug Tracker" = "https://github.com/agentsbay/agent-bay/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentsbay*"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
